@@ -623,6 +623,8 @@ SW_DIR_RECURSIVE=Recursi&ve search
 
 SW_TITLE=Text Search
 
+SW_NUMBER=Number of results:
+
 SW_VIEWER_TEXT=Searches are performed both in the source and the translation.\n \
     Searches are done within the \
     current project or in any folder or folder structure.\n \
